--- a/all/modules/_HSO/hso_anmeldung/html_templates/default_anmeldung_template_bvs.html
+++ b/all/modules/_HSO/hso_anmeldung/html_templates/default_anmeldung_template_bvs.html
@@ -145,7 +145,7 @@
         <p lang="de-CH" class="f-courier"><span class="small">Tel Mobile: %TELM%</span></p>
         <p lang="de-CH" class="f-courier"><span class="small">Email: %EMAIL%</span></p>
         <p lang="de-CH" class="f-courier"><span class="small">Geburtsdatum: %GEBDATE%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Geburtsort: %GEBURTSORT%</span></p>
+        <p lang="de-CH" class="f-courier"><span class="small">Heimatort: %GEBURTSORT%</span></p>
         <p lang="de-CH" class="f-courier"><span class="small">AHV Nummer: %AHV%</span></p>
         <p lang="de-CH" class="f-courier"><span class="small">Beruf: %BERUF%</span></p>
         <p lang="de-CH" class="f-courier"><span class="small">Ausbildung: %AUSBILDUNG%</span></p>
