- Texte Anmeldung (Vertrag, Bestätigungsseite, Webform) - db updated

--- a/all/modules/_HSO/hso_anmeldung/html_templates/default_anmeldung_template.html
+++ b/all/modules/_HSO/hso_anmeldung/html_templates/default_anmeldung_template.html
@@ -92,7 +92,7 @@
         <p lang="de-CH" class="f-arial normal"><b>Ort</b> %HSO_ADRESSE%, %HSO_PLZORT%</p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial normal">Bitte unterschreiben Sie den beiliegenden
-        Ausbildungsvertrag und senden ihn an die HSO zur&uuml;ck, damit Ihr Ausbildungsvertrag mit der HSO rechtsg&uuml;ltig wird.</p>
+        Ausbildungsvertrag und senden ihn der Form halber an die HSO zur&uuml;ck, damit Ihr Ausbildungsvertrag mit der HSO rechtsg&uuml;ltig wird.</p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial normal">Den Ferien- und Stundenplan, sowie die entsprechende
         Rechnung erhalten Sie ca. 2 Wochen vor dem Schulbeginn. Das Schulmaterial wird
