--- a/all/modules/_HSO/hso_anmeldung/html_templates/ecdl_anmeldung_template.html
+++ b/all/modules/_HSO/hso_anmeldung/html_templates/ecdl_anmeldung_template.html
@@ -43,7 +43,7 @@
   <p lang="de-CH" class="c5"><span class="c2">%GRUSSFORMEL%</span></p>
   <p lang="de-CH" class="c1"><br /></p>
   <p lang="de-CH" class="c8"><span class="c2">Wir haben Ihre Anmeldung erhalten und
-  best&auml;tigen Ihnen gerne die Reservation eines Pr&uuml;fungsplatzes f&uuml;r
+  best&auml;tigen Ihnen gerne den Pr&uuml;fungsplatzes f&uuml;r
   folgende ECDL Module unter %BETRIEBSYSTEM%:</span></p>
   <p lang="de-CH" class="c1"><br /></p>
   
