--- a/all/modules/_HSO/hso_anmeldung/html_templates/default_anmeldung_template_hbskmz.html
+++ b/all/modules/_HSO/hso_anmeldung/html_templates/default_anmeldung_template_hbskmz.html
@@ -60,14 +60,14 @@
         <p lang="de-CH" class="f-arial"><span class="normal">Z&uuml;rich, %DATUM%</span></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="c1"><br /></p>
-        <p lang="de-CH" class="f-arial"><span class="normal-bold">Herzlich Willkommen an der H.B.S. Schulen!</span></p>
+        <p lang="de-CH" class="f-arial"><span class="normal-bold">Herzlich Willkommen an der H.B.S / K.M.Z. Schule!</span></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial"><span class="normal">%GRUSSFORMEL%</span></p>
         <p lang="de-CH" class="c1"><br /></p>
       </td>
       <td width="207">
-        <p lang="de-CH" class="f-arial"><span class="small">H.B.S. Schulen</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small">H.B.S / K.M.Z. Schulen</span></p>
         <p lang="de-CH" class="f-arial"><span class="small">%HSO_ADRESSE%</span></p>
         <p lang="de-CH" class="f-arial"><span class="small">%HSO_PLZORT%</span></p>
         <p lang="de-CH" class="f-arial"><span class="small">Telefon %HSO_TEL%</span></p>
@@ -82,7 +82,7 @@
     </tr>
     <tr>
       <td colspan="2" width="621" valign="top">
-        <p lang="de-CH" class="f-arial normal">Es freut uns sehr, dass Sie sich f&uuml;r die H.B.S.
+        <p lang="de-CH" class="f-arial normal">Es freut uns sehr, dass Sie sich f&uuml;r die H.B.S / K.M.Z.
         entschieden haben! Gerne best&auml;tigen wir Ihnen ihre verbindliche Anmeldung zum folgenden Lehrgang:</p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial normal"><b>Lehrgang</b> %ABTEILUNG% %LEHRGANG%</p>
@@ -92,7 +92,7 @@
         <p lang="de-CH" class="f-arial normal"><b>Ort</b> %HSO_ADRESSE%, %HSO_PLZORT%</p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial normal">Bitte unterschreiben Sie den beiliegenden
-        Ausbildungsvertrag und senden ihn an die H.B.S. zur&uuml;ck, damit Ihr Ausbildungsvertrag mit der H.B.S. rechtsg&uuml;ltig wird.</p>
+        Ausbildungsvertrag und senden ihn an die H.B.S / K.M.Z. zur&uuml;ck, damit Ihr Ausbildungsvertrag mit der H.B.S / K.M.Z. rechtsg&uuml;ltig wird.</p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial normal">Den Ferien- und Stundenplan, sowie die entsprechende
         Rechnung erhalten Sie ca. 2 Wochen vor dem Schulbeginn. Das Schulmaterial wird
@@ -105,7 +105,7 @@
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial normal">Freundliche Gr&uuml;sse</p>
           <p lang="de-CH" class="c1"><br /></p>
-        <p lang="de-CH" class="f-arial normal">H.B.S. Schulen</p>
+        <p lang="de-CH" class="f-arial normal">H.B.S / K.M.Z. Schulen</p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="c1"><br /></p>
       </td>
@@ -125,7 +125,7 @@
     </tr>
     <tr>
       <td colspan="3" width="649" valign="top">
-        <p class="border-bottom"><span class="f-verdana-bold">Ausbildungsvertrag H.B.S.</span></p>
+        <p class="border-bottom"><span class="f-verdana-bold">Ausbildungsvertrag H.B.S / K.M.Z.</span></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-courier"><span class="small-bold">Abteilung:</span> <span class="small">%ABTEILUNG%</span></p>
         <p lang="de-CH" class="f-courier"><span class="small-bold">Lehrgang:</span> <span class="small">%LEHRGANG%</span></p>
@@ -157,17 +157,17 @@
         <p lang="de-CH" class="f-arial-justify"><span class="small">%DETAILEDCOSTS%</span></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial-justify"><span class="small">Der/die Unterzeichnende best&auml;tigt,
-        von den Bedingungen der Brosch&uuml;re H.B.S. %ABTEILUNG% Kenntnis genommen zu haben
+        von den Bedingungen der Brosch&uuml;re H.B.S / K.M.Z. %ABTEILUNG% Kenntnis genommen zu haben
         und erkl&auml;rt sich damit einverstanden. Gerichtsstand ist, soweit gesetzlich zul&auml;ssig, ausschliesslich Z&uuml;rich. Diese
         Anmeldung kann frei von jeder Verpflichtung innert 5 Tagen nach Unterzeichnung ohne Grundangabe seitens des/der Studierenden und
         Schule annulliert werden. Die Frist betr&auml;gt f&uuml;nf Tage und beginnt f&uuml;r den / die Studierende(n)
-        mit der Unterzeichnung des Vertrags und f&uuml;r die H.B.S. mit erfolgter Zustellung des Vertrags (Posteingangsstempel).
+        mit der Unterzeichnung des Vertrags und f&uuml;r die H.B.S / K.M.Z. mit erfolgter Zustellung des Vertrags (Posteingangsstempel).
         Der R&uuml;cktritt muss mit eingeschriebenem Brief erfolgen. Adressangaben der/des
         Unterzeichnenden d&uuml;rfen im Rahmen der Schulorganisation (z.B. als
         Klassenliste) ver&ouml;ffentlicht werden.</span></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial-justify"><span class="small">Der Eingang der Anmeldung wird von der
-        H.B.S. r&uuml;ckbest&auml;tigt und das Schulgeld in Rechnung gestellt. Es bleibt der
+        H.B.S / K.M.Z. r&uuml;ckbest&auml;tigt und das Schulgeld in Rechnung gestellt. Es bleibt der
         Schule vorbehalten, den Ausbildungslehrgang bei zu wenigen Anmeldungen und gegen
         vollst&auml;ndige R&uuml;ckerstattung aller eingezahlten Schulgelder - nicht
         durchzuf&uuml;hren.</span></p>
@@ -187,7 +187,7 @@
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial"><span class="smaller">Bitte unterschrieben retournieren
         an:</span></p>
-        <p lang="de-CH" class="f-arial"><span class="smaller">H.B.S. Schulen</span></p>
+        <p lang="de-CH" class="f-arial"><span class="smaller">H.B.S / K.M.Z. Schulen</span></p>
         <p lang="de-CH" class="f-arial"><span class="smaller">%HSO_ADRESSE%</span></p>
         <p lang="de-CH" class="f-arial"><span class="smaller">%HSO_PLZORT%</span></p>
       </td>
