- templates adapted according to Leyla input - anmelde-process corrected -

--- a/all/modules/_HSO/hso_anmeldung/html_templates/default_anmeldung_template_hbskmz.html
+++ b/all/modules/_HSO/hso_anmeldung/html_templates/default_anmeldung_template_hbskmz.html
@@ -48,7 +48,7 @@
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="c1"><br /></p>
-        <p lang="de-CH" class="c1"><span class="f-tahoma">PP        %HSO_PLZORT% _____<br /></span><br /></p>
+        <p lang="de-CH" class="c1"><span class="f-tahoma">PP        %HSO_PLZORT%<br /></span><br /></p>
         <p lang="de-CH" class="f-arial"><span class="normaller">%ANREDE%</span></p>
         <p lang="de-CH" class="f-arial"><span class="normaller">%VORNAME% %NAME%</span></p>
         <p lang="de-CH" class="f-arial"><span class="normaller">%ADRESSE%</span></p>
@@ -60,18 +60,17 @@
         <p lang="de-CH" class="f-arial"><span class="normal">Z&uuml;rich, %DATUM%</span></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="c1"><br /></p>
-        <p lang="de-CH" class="f-arial"><span class="normal-bold">Herzlich Willkommen an der H.B.S / K.M.Z. Schule!</span></p>
+        <p lang="de-CH" class="f-arial"><span class="normal-bold">Herzlich Willkommen an der HBS.KMZ Schule!</span></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial"><span class="normal">%GRUSSFORMEL%</span></p>
         <p lang="de-CH" class="c1"><br /></p>
       </td>
       <td width="207">
-        <p lang="de-CH" class="f-arial"><span class="small">H.B.S / K.M.Z. Schulen</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small">HBS.KMZ Schulen</span></p>
         <p lang="de-CH" class="f-arial"><span class="small">%HSO_ADRESSE%</span></p>
         <p lang="de-CH" class="f-arial"><span class="small">%HSO_PLZORT%</span></p>
         <p lang="de-CH" class="f-arial"><span class="small">Telefon %HSO_TEL%</span></p>
-        <p lang="de-CH" class="f-arial"><span class="small">Fax %HSO_FAX%</span></p>
         <p lang="de-CH" class="f-arial"><span class="small">hbs.ch</span></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial"><span class="small">%KONTAKTPERSON%</span></p>
@@ -82,7 +81,7 @@
     </tr>
     <tr>
       <td colspan="2" width="621" valign="top">
-        <p lang="de-CH" class="f-arial normal">Es freut uns sehr, dass Sie sich f&uuml;r die H.B.S / K.M.Z.
+        <p lang="de-CH" class="f-arial normal">Es freut uns sehr, dass Sie sich f&uuml;r die HBS.KMZ Schulen
         entschieden haben! Gerne best&auml;tigen wir Ihnen ihre verbindliche Anmeldung zum folgenden Lehrgang:</p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial normal"><b>Lehrgang</b> %ABTEILUNG% %LEHRGANG%</p>
@@ -92,7 +91,7 @@
         <p lang="de-CH" class="f-arial normal"><b>Ort</b> %HSO_ADRESSE%, %HSO_PLZORT%</p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial normal">Bitte unterschreiben Sie den beiliegenden
-        Ausbildungsvertrag und senden ihn an die H.B.S / K.M.Z. zur&uuml;ck, damit Ihr Ausbildungsvertrag mit der H.B.S / K.M.Z. rechtsg&uuml;ltig wird.</p>
+        Ausbildungsvertrag und senden ihn an die HBS.KMZ Schulen zur&uuml;ck, damit Ihr Ausbildungsvertrag mit der HBS.KMZ Schulen rechtsg&uuml;ltig wird.</p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial normal">Den Ferien- und Stundenplan, sowie die entsprechende
         Rechnung erhalten Sie ca. 2 Wochen vor dem Schulbeginn. Das Schulmaterial wird
@@ -105,7 +104,7 @@
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial normal">Freundliche Gr&uuml;sse</p>
           <p lang="de-CH" class="c1"><br /></p>
-        <p lang="de-CH" class="f-arial normal">H.B.S / K.M.Z. Schulen</p>
+        <p lang="de-CH" class="f-arial normal">HBS.KMZ Schulen</p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="c1"><br /></p>
       </td>
@@ -125,49 +124,55 @@
     </tr>
     <tr>
       <td colspan="3" width="649" valign="top">
-        <p class="border-bottom"><span class="f-verdana-bold">Ausbildungsvertrag H.B.S / K.M.Z.</span></p>
+        <p><span class="f-verdana-bold">AUSBILDUNGSVERTRAG HBS.KMZ SCHULEN</span></p>
         <p lang="de-CH" class="c1"><br /></p>
-        <p lang="de-CH" class="f-courier"><span class="small-bold">Abteilung:</span> <span class="small">%ABTEILUNG%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small-bold">Lehrgang:</span> <span class="small">%LEHRGANG%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small-bold">Dauer von:</span> <span class="small">%DAUERVON%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small-bold">Dauer bis:</span> <span class="small">%DAUERBIS%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Abteilung:</span> <span class="small">%ABTEILUNG%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Lehrgang:</span> <span class="small">%LEHRGANG%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Dauer von:</span> <span class="small">%DAUERVON%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Dauer bis:</span> <span class="small">%DAUERBIS%</span></p>
         <p lang="de-CH" class="c1"><br /></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Anrede: %ANREDE%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Name: %NAME%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Vorname: %VORNAME%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Adresse: %ADRESSE%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Plz,Ort: %PLZORT%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Firma Name: %FIRMA_NAME%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Firma Adresse: %FIRMA_ADRESSE%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Firma Plz,Ort: %FIRMA_PLZORT%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Tel Privat: %TELP%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Tel Gesch.: %TELG%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Tel Mobile: %TELM%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Email: %EMAIL%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Geburtsdatum: %GEBDATE%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Heimatort: %GEBURTSORT%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">AHV Nummer: %AHV%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Beruf: %BERUF%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Ausbildung: %AUSBILDUNG%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Zahlungsart: %ZAHLUNGSART%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Rechnung an: %RECHNUNGAN%</span></p>
+        <p><span class="f-verdana-bold">PERSONALIEN (Korrespondenz)</span></p>
         <p lang="de-CH" class="c1"><br /></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Anrede:</span> <span class="small">%ANREDE%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Name:</span> <span class="small">%NAME%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Vorname:</span> <span class="small">%VORNAME%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Adresse:</span> <span class="small">%ADRESSE%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Plz,Ort:</span> <span class="small">%PLZORT%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Tel P:</span> <span class="small">%TELP%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Email:</span> <span class="small">%EMAIL%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Geb.Datum:</span> <span class="small">%GEBDATE%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Heimatort:</span> <span class="small">%GEBURTSORT%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">AHV Nr.:</span> <span class="small">%AHV%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Beruf:</span> <span class="small">%BERUF%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Ausbildung:</span> <span class="small">%AUSBILDUNG%</span></p>
+        <p lang="de-CH" class="c1"><br /></p>
+        <p><span class="f-verdana-bold">FIRMA (Rechnungsadresse)</span></p>
+        <p lang="de-CH" class="c1"><br /></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Firma:</span> <span class="small">%FIRMA_NAME%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Adresse:</span> <span class="small">%FIRMA_ADRESSE%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Plz,Ort:</span> <span class="small">%FIRMA_PLZORT%</span></p>
+        <p lang="de-CH" class="c1"><br /></p>
+        <p><span class="f-verdana-bold">ZAHLUNGSMODUS</span></p>
+        <p lang="de-CH" class="c1"><br /></p>
+        <p lang="de-CH" class="f-arial"><span class="small">%ZAHLUNGSART%</span></p>
+        <p lang="de-CH" class="c1"><br /></p>
+        <p><span class="f-verdana-bold">TOTAL KOSTEN</span></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial-justify"><span class="small">Kosten exkl. Ratenzahlungszuschlag und exkl. Einschreibegeb&uuml;hr:</span></p>
         <p lang="de-CH" class="f-arial-justify"><span class="small">%DETAILEDCOSTS%</span></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial-justify"><span class="small">Der/die Unterzeichnende best&auml;tigt,
-        von den Bedingungen der Brosch&uuml;re H.B.S / K.M.Z. %ABTEILUNG% Kenntnis genommen zu haben
+        von den Bedingungen der Brosch&uuml;re HBS.KMZ Schulen %ABTEILUNG% Kenntnis genommen zu haben
         und erkl&auml;rt sich damit einverstanden. Gerichtsstand ist, soweit gesetzlich zul&auml;ssig, ausschliesslich Z&uuml;rich. Diese
         Anmeldung kann frei von jeder Verpflichtung innert 5 Tagen nach Unterzeichnung ohne Grundangabe seitens des/der Studierenden und
         Schule annulliert werden. Die Frist betr&auml;gt f&uuml;nf Tage und beginnt f&uuml;r den / die Studierende(n)
-        mit der Unterzeichnung des Vertrags und f&uuml;r die H.B.S / K.M.Z. mit erfolgter Zustellung des Vertrags (Posteingangsstempel).
+        mit der Unterzeichnung des Vertrags und f&uuml;r die HBS.KMZ Schulen mit erfolgter Zustellung des Vertrags (Posteingangsstempel).
         Der R&uuml;cktritt muss mit eingeschriebenem Brief erfolgen. Adressangaben der/des
         Unterzeichnenden d&uuml;rfen im Rahmen der Schulorganisation (z.B. als
         Klassenliste) ver&ouml;ffentlicht werden.</span></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial-justify"><span class="small">Der Eingang der Anmeldung wird von der
-        H.B.S / K.M.Z. r&uuml;ckbest&auml;tigt und das Schulgeld in Rechnung gestellt. Es bleibt der
+        HBS.KMZ Schulen r&uuml;ckbest&auml;tigt und das Schulgeld in Rechnung gestellt. Es bleibt der
         Schule vorbehalten, den Ausbildungslehrgang bei zu wenigen Anmeldungen und gegen
         vollst&auml;ndige R&uuml;ckerstattung aller eingezahlten Schulgelder - nicht
         durchzuf&uuml;hren.</span></p>
@@ -187,7 +192,7 @@
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial"><span class="smaller">Bitte unterschrieben retournieren
         an:</span></p>
-        <p lang="de-CH" class="f-arial"><span class="smaller">H.B.S / K.M.Z. Schulen</span></p>
+        <p lang="de-CH" class="f-arial"><span class="smaller">HBS.KMZ Schulen</span></p>
         <p lang="de-CH" class="f-arial"><span class="smaller">%HSO_ADRESSE%</span></p>
         <p lang="de-CH" class="f-arial"><span class="smaller">%HSO_PLZORT%</span></p>
       </td>
