--- a/all/modules/_HSO/hso_anmeldung/html_templates/default_anmeldung_template.html
+++ b/all/modules/_HSO/hso_anmeldung/html_templates/default_anmeldung_template.html
@@ -21,7 +21,7 @@
     p.f-arial-justify {font-family: Arial, sans-serif; padding: 0; text-align: justify}
     p.f-courier {font-family: Courier, monospace; padding: 0;}
     span.f-tahoma {font-family: Tahoma, sans-serif; font-size: 11pt; text-decoration: underline}
-    span.f-verdana-bold {font-family: Verdana, sans-serif; font-size: 11pt; font-weight: bold}
+    span.f-verdana-bold {font-family: Verdana, sans-serif; font-size: 10pt; font-weight: bold}
     .normal-bold {font-size: 11pt; font-weight: bold}
     .normal {font-size: 11pt}
     .normaller {font-size: 11pt; line-height: 115%}
@@ -48,7 +48,7 @@
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="c1"><br /></p>
-        <p lang="de-CH" class="c1"><span class="f-tahoma">PP        %HSO_PLZORT% _____<br /></span><br /></p>
+        <p lang="de-CH" class="c1"><span class="f-tahoma">PP        %HSO_PLZORT%<br /></span><br /></p>
         <p lang="de-CH" class="f-arial"><span class="normaller">%ANREDE%</span></p>
         <p lang="de-CH" class="f-arial"><span class="normaller">%VORNAME% %NAME%</span></p>
         <p lang="de-CH" class="f-arial"><span class="normaller">%ADRESSE%</span></p>
@@ -71,7 +71,6 @@
         <p lang="de-CH" class="f-arial"><span class="small">%HSO_ADRESSE%</span></p>
         <p lang="de-CH" class="f-arial"><span class="small">%HSO_PLZORT%</span></p>
         <p lang="de-CH" class="f-arial"><span class="small">Telefon %HSO_TEL%</span></p>
-        <p lang="de-CH" class="f-arial"><span class="small">Fax %HSO_FAX%</span></p>
         <p lang="de-CH" class="f-arial"><span class="small">hso.ch</span></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial"><span class="small">%KONTAKTPERSON%</span></p>
@@ -125,33 +124,39 @@
     </tr>
     <tr>
       <td colspan="3" width="649" valign="top">
-        <p class="border-bottom"><span class="f-verdana-bold">Ausbildungsvertrag HSO</span></p>
+        <p><span class="f-verdana-bold">AUSBILDUNGSVERTRAG HSO</span></p>
         <p lang="de-CH" class="c1"><br /></p>
-        <p lang="de-CH" class="f-courier"><span class="small-bold">Abteilung:</span> <span class="small">%ABTEILUNG%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small-bold">Lehrgang:</span> <span class="small">%LEHRGANG%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small-bold">Dauer von:</span> <span class="small">%DAUERVON%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small-bold">Dauer bis:</span> <span class="small">%DAUERBIS%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Abteilung:</span> <span class="small">%ABTEILUNG%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Lehrgang:</span> <span class="small">%LEHRGANG%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Dauer von:</span> <span class="small">%DAUERVON%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Dauer bis:</span> <span class="small">%DAUERBIS%</span></p>
         <p lang="de-CH" class="c1"><br /></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Anrede: %ANREDE%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Name: %NAME%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Vorname: %VORNAME%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Adresse: %ADRESSE%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Plz,Ort: %PLZORT%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Firma Name: %FIRMA_NAME%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Firma Adresse: %FIRMA_ADRESSE%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Firma Plz,Ort: %FIRMA_PLZORT%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Tel Privat: %TELP%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Tel Gesch.: %TELG%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Tel Mobile: %TELM%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Email: %EMAIL%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Geburtsdatum: %GEBDATE%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Heimatort: %GEBURTSORT%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">AHV Nummer: %AHV%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Beruf: %BERUF%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Ausbildung: %AUSBILDUNG%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Zahlungsart: %ZAHLUNGSART%</span></p>
-        <p lang="de-CH" class="f-courier"><span class="small">Rechnung an: %RECHNUNGAN%</span></p>
+        <p><span class="f-verdana-bold">PERSONALIEN (Korrespondenz)</span></p>
         <p lang="de-CH" class="c1"><br /></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Anrede:</span> <span class="small">%ANREDE%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Name:</span> <span class="small">%NAME%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Vorname:</span> <span class="small">%VORNAME%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Adresse:</span> <span class="small">%ADRESSE%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Plz,Ort:</span> <span class="small">%PLZORT%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Tel P:</span> <span class="small">%TELP%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Email:</span> <span class="small">%EMAIL%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Geb.Datum:</span> <span class="small">%GEBDATE%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Heimatort:</span> <span class="small">%GEBURTSORT%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">AHV Nr.:</span> <span class="small">%AHV%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Beruf:</span> <span class="small">%BERUF%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Ausbildung:</span> <span class="small">%AUSBILDUNG%</span></p>
+        <p lang="de-CH" class="c1"><br /></p>
+        <p><span class="f-verdana-bold">FIRMA (Rechnungsadresse)</span></p>
+        <p lang="de-CH" class="c1"><br /></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Firma:</span> <span class="small">%FIRMA_NAME%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Adresse:</span> <span class="small">%FIRMA_ADRESSE%</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small-bold">Plz,Ort:</span> <span class="small">%FIRMA_PLZORT%</span></p>
+        <p lang="de-CH" class="c1"><br /></p>
+        <p><span class="f-verdana-bold">ZAHLUNGSMODUS</span></p>
+        <p lang="de-CH" class="c1"><br /></p>
+        <p lang="de-CH" class="f-arial"><span class="small">%ZAHLUNGSART%</span></p>
+        <p lang="de-CH" class="c1"><br /></p>
+        <p><span class="f-verdana-bold">TOTAL KOSTEN</span></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial-justify"><span class="small">Kosten exkl. Ratenzahlungszuschlag und exkl. Einschreibegeb&uuml;hr:</span></p>
         <p lang="de-CH" class="f-arial-justify"><span class="small">%DETAILEDCOSTS%</span></p>
@@ -176,14 +181,11 @@
         Vorname, Adresse und PLZ/Ort der/des Erziehungsberechtigten angeben).</span></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="c1"><br /></p>
-        <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="border-bottom"><span class="f-arial smaller">Ort, Datum Unterschrift</span></p>
-        <p lang="de-CH" class="c1"></p>
       </td>
     </tr>
     <tr valign="top">
       <td width="320">
-        <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial"><span class="smaller">Bitte unterschrieben retournieren
         an:</span></p>
         <p lang="de-CH" class="f-arial"><span class="smaller">HSO Wirtschaftsschule Schweiz AG</span></p>
