- TELC template location adapted - db updated

--- a/all/modules/_HSO/hso_anmeldung/html_templates/telc_anmeldung_template.html
+++ b/all/modules/_HSO/hso_anmeldung/html_templates/telc_anmeldung_template.html
@@ -63,7 +63,7 @@
   <p lang="de-CH" class="c8"><span class="c2">Freundliche Gr&uuml;sse</span></p>
   <p lang="de-CH" class="c1"><br /></p>
   <p lang="de-CH" class="c1"><br /></p>
-  <p lang="de-CH" class="c8"><span class="c2">HSO Wirtschaftsschule %LOCATION% AG</span></p>
+  <p lang="de-CH" class="c8"><span class="c2">HSO Wirtschaftsschule Schweiz AG</span></p>
   <p lang="de-CH" class="c8"><span class="c2">%KONTAKTPERSON%</span></p>
   <p lang="de-CH" class="c8"><span class="c2">Direkt %KONTAKTTEL%</span></p>
   <p lang="de-CH" class="c8"><span class="c2">%KONTAKTEMAIL%</span></p>
